--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,11 @@ image = "0.24.2"
 winit = "0.26"
 winit_input_helper = "0.11"
 rand = "0.8"
+rand_xoshiro = "0.6"
 
 [profile.dev]
 debug = 1
 incremental = true
+
+[profile.release]
+debug = 1
