--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ctrlc = "3.2.2"
 pixels = "0.9.0"
 image = "0.24.2"
 winit = "0.26"
 winit_input_helper = "0.11"
 rand = "0.8"
 rand_xoshiro = "0.6"
+rand_distr = "0.4.3"
+std-semaphore = "0.1.0"
 
 [profile.dev]
 debug = 1
@@ -19,3 +22,6 @@ incremental = true
 
 [profile.release]
 debug = 1
+
+[features]
+sigma = []
