--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rand = "0.8"
 rand_xoshiro = "0.6"
 rand_distr = "0.4.3"
 std-semaphore = "0.1.0"
+dyn-clone = "1.0.5"
 
 [profile.dev]
 debug = 1
@@ -24,4 +25,6 @@ incremental = true
 debug = 1
 
 [features]
+default = ["box"]
 sigma = []
+box = []
