--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ rand_distr = "0.4.3"
 std-semaphore = "0.1.0"
 dyn-clone = "1.0.5"
 
+rust_lisp = "0.7.2"
+
 [profile.dev]
 debug = 1
 incremental = true
