--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rand_distr = "0.4.3"
 std-semaphore = "0.1.0"
 dyn-clone = "1.0.5"
 rust_lisp = "0.9.0"
+num_cpus = "1.13"
 
 [profile.dev]
 debug = 1
