--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ std-semaphore = "0.1.0"
 dyn-clone = "1.0.5"
 rust_lisp = "0.9.0"
 num_cpus = "1.13"
+clap = {version = "3.1", features = ["cargo"]}
 
 [profile.dev]
 debug = 1
