--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ dyn-clone = "1.0.5"
 rust_lisp = "0.9.0"
 num_cpus = "1.13"
 clap = {version = "3.1", features = ["cargo"]}
+worker-pool = "0.2.0"
 
 [profile.dev]
 debug = 1
